ppc index code change 2

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
         /* Navbar */
         .navbar {
-            background: linear-gradient(90deg, #6a11cb, #2575fc);
+            background: linear-gradient(90deg, #4e79a7, #59a14f);
             padding: 1rem 2rem;
             display: flex;
             justify-content: space-between;
@@ -58,12 +58,12 @@
         }
 
         .navbar .nav-links a:hover {
-            color: #ffdd57;
+            color: #4e79a7;
         }
 
         /* Hero Section */
-        /*.hero {
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
+        .hero {
+            background: linear-gradient(135deg, #4e79a7, #59a14f);
             color: white;
             padding: 6rem 2rem;
             text-align: center;
@@ -78,7 +78,7 @@
         .hero p {
             font-size: 1.2rem;
             animation: fadeIn 3s ease-in-out;
-        } */
+        }
 
         /* Tableau Embed Section */
         .tableau-section {
@@ -139,7 +139,7 @@
         }
 
         .footer a {
-            color: #ffdd57;
+            color: white;
             text-decoration: none;
         }
 
@@ -152,7 +152,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: #6a11cb;
+            background: #4e79a7;
             color: white;
             padding: 10px 15px;
             border-radius: 50%;
@@ -199,7 +199,7 @@
 
     <!-- Tableau Embed Section -->
     <section id="dashboard" class="tableau-section">
-        <div class='tableauPlaceholder' id='viz1744147363667' style='position: relative'><noscript><a href='#'><img alt='PPC Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PP&#47;PPCMarketing&#47;PPCDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='PPCMarketing&#47;PPCDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PP&#47;PPCMarketing&#47;PPCDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744147363667');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1200px';vizElement.style.height='1027px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        <div class='tableauPlaceholder' id='viz1744164474783' style='position: relative'><noscript><a href='#'><img alt='PPC Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PP&#47;PPCMarketing&#47;PPCDashboard&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='PPCMarketing&#47;PPCDashboard' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;PP&#47;PPCMarketing&#47;PPCDashboard&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1744164474783');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1250px';vizElement.style.height='1027px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     </section>
 
     <!-- Cards Section -->
